Fixing issues with icon alignment - looking better now.

--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -29,8 +29,14 @@ input, form, label, textarea, button, select, option{
 
 .icon  {
   color: var(--teal) !important;
-  font-size: 16px !important;
-  align-self: center !important;
+  vertical-align: middle;
+  font-size: 1rem;
+  margin-right: 0.5rem;
+  display: inline-block; 
+}
+
+.icon:not(:first-of-type) {
+  margin-left: 0.5rem; 
 }
 
 .ui.fixed.menu {
